@@ -66,7 +66,7 @@ auth_mechanisms = PH_AUTH_MECHANISMS
 #default_process_limit = 100
 
 service auth {
-    unix_listener /var/spool/postfix/dovecot-auth {
+    unix_listener PH_POSTFIX_CHROOT_DIR/dovecot-auth {
         user = PH_DOVECOT_AUTH_USER
         group = PH_DOVECOT_AUTH_GROUP
         mode = 0666
@@ -80,6 +80,33 @@ service auth {
         user = PH_AUTH_MASTER_USER
         group = PH_AUTH_MASTER_GROUP
         mode = 0660
+    }
+}
+
+# LMTP server (Local Mail Transfer Protocol).
+# Reference: http://wiki2.dovecot.org/LMTP
+service lmtp {
+    user = PH_AUTH_MASTER_USER
+
+    # For higher volume sites, it may be desirable to increase the number of
+    # active listener processes. A range of 5 to 20 is probably good for most
+    # sites.
+    process_min_avail = 5
+
+    # Logging.
+    # Require 'info_log_path =' in 'protocol lmtp {}' block.
+    executable = lmtp -L
+
+    # Listening on socket file and TCP
+    unix_listener PH_POSTFIX_CHROOT_DIR/private/dovecot-lmtp {
+        user = PH_DOVECOT_AUTH_USER
+        group = PH_DOVECOT_AUTH_GROUP
+        mode = 0600
+    }
+
+    inet_listener lmtp {
+        #address = 192.168.0.24 127.0.0.1 ::1
+        port = 24
     }
 }
 
@@ -174,10 +201,23 @@ protocol lda {
     # Reference: http://wiki2.dovecot.org/LDA
     mail_plugins = $mail_plugins sieve
     auth_socket_path = /var/run/dovecot/auth-master
-    log_path = /var/log/sieve.log
+    log_path = PH_DOVECOT_SIEVE_LOG_FILE
     lda_mailbox_autocreate = yes
     postmaster_address = root
 }
+
+protocol lmtp {
+    # Log file
+    info_log_path = PH_DOVECOT_LMTP_LOG_FILE
+
+    # Plugins
+    mail_plugins = quota sieve
+    postmaster_address = postmaster
+
+    lmtp_save_to_detail_mailbox = yes
+    recipient_delimiter = +
+}
+
 protocol imap {
     mail_plugins = $mail_plugins imap_quota
     imap_client_workarounds = tb-extra-mailbox-sep
